Make sure segmented control input not offscreen.
The input is used by e.g. Chrome/Safari to position the "required" error
message, so needs to be on screen.

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -2253,7 +2253,7 @@ table.nicetable {
 .segmented-control--radio {
   input {
     position: absolute;
-    left: -999px;
+    opacity: 0;
   }
 
   input:checked + label {
